Formatted *.java